<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.umlgraph</groupId>
  <artifactId>umlgraph</artifactId>
  <packaging>jar</packaging>
  <name>UMLGraph</name>
  <version>5.7.3-SNAPSHOT</version>
  <description>Declarative Drawing of UML Diagrams</description>
  <url>http://www.spinellis.gr/umlgraph</url>

  <licenses>
    <license>
      <name>BSD License (original)</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <repositories>
    <repository>
  	<id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
  </repositories>
	
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <junit.jupiter.version>5.4.0</junit.jupiter.version>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <scm>
    <url>https://github.com/dspinellis/UMLGraph/</url>
    <connection>scm:git://github.com/dspinellis/UMLGraph.git</connection>
    <developerConnection>scm:git:git@github.com:dspinellis/UMLGraph.git</developerConnection>
    <tag>R5_7_1</tag>
  </scm>

  <developers>
    <developer>
      <id>dspinellis</id>
      <name>Diomidis Spinellis</name>
      <email>dds@aueb.gr</email>
    </developer>
  </developers>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.7.19</version>
      <scope>test</scope>
    </dependency>
	  
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
      <version>4.2</version>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
       <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.1</version>
        <configuration>
            <forkCount>0</forkCount>
            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
	    
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.umlgraph.doclet.UmlGraph</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
	  <autoVersionSubmodules>true</autoVersionSubmodules>
	  <useReleaseProfile>false</useReleaseProfile>
	  <releaseProfiles>release</releaseProfiles>
	  <goals>deploy</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
	  <tags>
	    <tag>
	      <name>depend</name>
	      <placement>X</placement>
	    </tag>
	    <tag>
	      <name>hidden</name>
	      <placement>X</placement>
	    </tag>
	    <tag>
	      <name>opt</name>
	      <placement>X</placement>
	    </tag>
	  </tags>
          
          <docletPath>${project.build.directory}${file.separator}${project.build.finalName}.jar</docletPath>
          <additionalparam>-inferrel</additionalparam>
          <additionalparam>-inferdep</additionalparam>
          <additionalparam>-autosize</additionalparam>
          <additionalparam>-collapsible</additionalparam>
          <additionalparam>-hide java.*</additionalparam>
          <additionalparam>-collpackages</additionalparam>
          <additionalparam>-qualify</additionalparam>
          <additionalparam>-postfixpackage</additionalparam>
          <additionalparam>-nodefontsize 9</additionalparam>
          <additionalparam>-nodefontpackagesize 7</additionalparam>
          <additionalparam>-link http://docs.oracle.com/javase/7/docs/jdk/api/javadoc/doclet/</additionalparam>
          <additionalparam>-link http://download.oracle.com/javase/7/docs/api/</additionalparam>
	  <doclint>none</doclint>
          <useStandardDocletOptions>true</useStandardDocletOptions>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
